Updated navigation bar and grid layout.

--- a/index.html
+++ b/index.html
@@ -22,43 +22,57 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Joseph Brimeyer</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h2>Joseph Brimeyer</h2>
+            </div>
+            <div class="col-sm">
+                </div>
+            <div class="col-sm">
+                <nav>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+    <header>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <h3>About Me</h3>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Sky Landing.JPG" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h4 class="card-title">Joseph Brimeyer</h4>
+                        <p class="card-text">My name is Joseph Brimeyer and I am enrolled in coding BootCamp at
+                            the University of Washington. I am studying to be a full stack web developer. I enjoy
+                            outdoor activities with my family and my dog.
+                        </p>
+                        <a href="https://linkedin.com/in/joe-brimeyer-15398015" class="btn btn-primary">My
+                            Linkedin</a>
+                        <div class="col-4"></div>
+
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                </div>
+
+
+
+            </div>
         </div>
-    </nav>
+
+    </div>
 
 </body>
 
