--- a/portfolio.html
+++ b/portfolio.html
@@ -22,66 +22,85 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><h2>Joseph Brimeyer</h2></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h2>Joseph Brimeyer</h2>
+            </div>
+            <div class="col-sm">
+                </div>
+            <div class="col-sm">
+                <nav>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="images/Mt Rainier.jpeg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Outdoors</h5>
+                            <p class="card-text">I am a big fan of the outdoors. Here I am hiking on Mt Rainier.</p>
+                        </div>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="images/Sky Landing.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Interests</h5>
+                            <p class="card-text">I have many interests.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                                additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-    <header>
+    </div>
 
-    </header>
-    <div class:"container">
-        <section class:"main-bio">
-            
-            <img id:"bio-image" src="https://placehold.it/200x200" alt="Joseph Brimeyer">
-            <p>My name is Joseph Brimeyer and I am enrolled in coding BootCamp at the University of Washington. I enjoy
-                outdoor activities with my family and my dog. I especially enjoy Hiking, Camping, and fishing. </p>
-            <p>Some of my other hobbies are cooking, gardening, golfing and traveling. I have been a manager for the
-                past 19 years and am looking to make a career change to web developmenet. </p>
-            <a href="https://linkedin.com/in/joe-brimeyer-15398015">My Bio</a>
-        </section>
-        <section id:"contact-info">
-            <h2>Contact Info</h2>
-            <ul>
-                <li><strong>Email Address</strong> <a href="https://jbrimeyer@gmail.com">My Email</a></li>
-                <li><strong>Github:</strong> <a href="https://github.com/josephbrimeyer/JosephBrimeyer-C-.git">My
-                        Github</a>
-                </li>
-                <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-            </ul>
-        </section>
+
+    
+
+    </div>
+    <section id:"contact-info">
+        <h3>Contact Info</h3>
+        <ul>
+            <li><strong>Email Address</strong> <a href="https://jbrimeyer@gmail.com">My Email</a></li>
+            <li><strong>Github:</strong> <a href="https://github.com/josephbrimeyer/JosephBrimeyer-C-.git">My
+                    Github</a>
+            </li>
+            <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        </ul>
+    </section>
     </div>
 
 </body>
