Updated CSS and grid layout.

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         </nav>
         </div>
         <div class="container">
-            <!-- Content here -->
+           
 
             <h3>Contact</h3>
             <form>
@@ -74,7 +74,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
-        
+     </div>   
 
 </body>
 
