--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
                 <h3>About Me</h3>
 
                 <div class="card" style="width: 18rem;">
-                    <img src="images/Sky Landing.JPG" class="card-img-top" alt="...">
+                    <img src="images/Sky Landing.JPG" class="card-img-top" alt="A photo of a man sitting in a sky chair overlooking the Methow Valley in Eastern Washington State.">
                     <div class="card-body">
                         <h4 class="card-title">Joseph Brimeyer</h4>
-                        <p class="card-text">My name is Joseph Brimeyer and I am enrolled in coding BootCamp at
-                            the University of Washington. I am studying to be a full stack web developer. I enjoy
-                            outdoor activities with my family and my dog.
+                        <p class="card-text">My name is Joseph Brimeyer and I am enrolled in coding Bootcamp at
+                            the University of Washington. My goal is to enter the tech field as a full stack web developer.  I am an experienced manager of manufacturing and distribution operations. 
                         </p>
                         <a href="https://linkedin.com/in/joe-brimeyer-15398015" class="btn btn-primary">My
                             Linkedin</a>
