--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <h2>Joseph Brimeyer</h2>
+                <a class="nav-link" href="index.html"><h2>Joseph Brimeyer</h2></a>
             </div>
             <div class="col-sm">
-                </div>
+            </div>
             <div class="col-sm">
                 <nav>
                     <ul class="nav justify-content-end">
@@ -44,65 +44,62 @@
                     </ul>
                 </nav>
             </div>
+
+
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col mb-4">
                     <div class="card">
-                        <img src="images/Mt Rainier.jpeg" class="card-img-top" alt="...">
+                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                            class="card-img-top" alt="A photo of a computer screen with code">
+                        <div class="card-body">
+                            <h5 class="card-title">Projects</h5>
+                            <p class="card-text">You can view my projects by clicking on the link below. Check back
+                                often as I am constantly adding content.</p>
+                            <a href="https://github.com/josephbrimeyer" class="btn btn-primary stretched-link">Click here.</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCF7jR8l6MAmqolymJ7KFDTcmbJ1Asck51XiFLPZ3KynNOt1LW&usqp=CAU"
+                            class="card-img-top" alt="A clip art image of a basketball.">
+                        <div class="card-body">
+                            <h5 class="card-title">Volunteer Activities</h5>
+                            <p class="card-text">I volunteer as a basketball coach for youth. I have coached 4 seasons
+                                through the Seattle CYO program.</p>
+                            <a href="https://www.teamsideline.com/seattlecyo"
+                                class="btn btn-primary stretched-link">Click here.</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card">
+                        <img src="images/Hawaii.jpeg" class="card-img-top"
+                            alt="Photo of a man standing at the top of a hill with Hanauma Bay in the background">
                         <div class="card-body">
                             <h5 class="card-title">Outdoors</h5>
-                            <p class="card-text">I am a big fan of the outdoors. Here I am hiking on Mt Rainier.</p>
+                            <p class="card-text">I am a big fan of the outdoors. I like to explore new places. This
+                                picture was taken in Oahu Hawaii after snorkeling in Hanauma Bay.</p>
+                            <a href="https://hanaumabaystatepark.com/" class="btn btn-primary stretched-link">Click
+                                here.</a>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
                     <div class="card">
-                        <img src="images/Sky Landing.JPG" class="card-img-top" alt="...">
+                        <img src="images/Seahawks.jpeg" class="card-img-top"
+                            alt="Photo of Century Link field, home of the Seattle Seahawks football team from the perspective of the west-side stands.">
                         <div class="card-body">
                             <h5 class="card-title">Interests</h5>
-                            <p class="card-text">I have many interests.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                                additional content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">I have many interests including hiking, camping, fishing, golf, and
+                                music. I also enjoy baseball, basketball and going to Seahawk games.</p>
+                            <a href="https://www.seahawks.com" class="btn btn-primary stretched-link">Click here.</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    
-
-    </div>
-    <section id:"contact-info">
-        <h3>Contact Info</h3>
-        <ul>
-            <li><strong>Email Address</strong> <a href="https://jbrimeyer@gmail.com">My Email</a></li>
-            <li><strong>Github:</strong> <a href="https://github.com/josephbrimeyer/JosephBrimeyer-C-.git">My
-                    Github</a>
-            </li>
-            <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-        </ul>
-    </section>
-    </div>
-
 </body>
 
 </html>
