--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>Joseph Brimeyer</h2>
             </div>
             <div class="col-sm">
-                </div>
+            </div>
             <div class="col-sm">
                 <nav>
                     <ul class="nav justify-content-end">
@@ -44,34 +44,36 @@
                     </ul>
                 </nav>
             </div>
-    <header>
+            <header>
 
-    </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-8">
-                <h3>About Me</h3>
+            </header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <h3>About Me</h3>
 
-                <div class="card" style="width: 18rem;">
-                    <img src="images/Sky Landing.JPG" class="card-img-top" alt="A photo of a man sitting in a sky chair overlooking the Methow Valley in Eastern Washington State.">
-                    <div class="card-body">
-                        <h4 class="card-title">Joseph Brimeyer</h4>
-                        <p class="card-text">My name is Joseph Brimeyer and I am enrolled in coding Bootcamp at
-                            the University of Washington. My goal is to enter the tech field as a full stack web developer.  I am an experienced manager of manufacturing and distribution operations. 
-                        </p>
-                        <a href="https://linkedin.com/in/joe-brimeyer-15398015" class="btn btn-primary">My
-                            Linkedin</a>
-                        <div class="col-4"></div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="images/Sky Landing.JPG" class="card-img-top"
+                                alt="A photo of a man sitting in a sky chair overlooking the Methow Valley in Eastern Washington State.">
+                            <div class="card-body">
+                                <h4 class="card-title">Joseph Brimeyer</h4>
+                                <p class="card-text">My name is Joseph Brimeyer and I am enrolled in coding Bootcamp at
+                                    the University of Washington. My goal is to enter the tech field as a full stack web
+                                    developer. I am an experienced manager of manufacturing and distribution operations.
+                                </p>
+                                <a href="https://linkedin.com/in/joe-brimeyer-15398015" class="btn btn-primary">My
+                                    Linkedin</a>
+                                <div class="col-4"></div>
+
+                            </div>
+                        </div>
+
+
 
                     </div>
                 </div>
 
-
-
             </div>
-        </div>
-
-    </div>
 
 </body>
 
