--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <h2>Joseph Brimeyer</h2>
+                <a class="nav-link" href="index.html"><h2>Joseph Brimeyer</h2></a>
             </div>
             <div class="col-sm">
             </div>
