--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <h2>Joseph Brimeyer</h2>
+                <a class="nav-link" href="index.html"><h2>Joseph Brimeyer</h2></a>
             </div>
             <div class="col-sm">
             </div>
