--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <a class="nav-link" href="index.html"><h2>Joseph Brimeyer</h2></a>
+                <a class="nav-link" href="index.html">
+                    <h2>Joseph Brimeyer</h2>
+                </a>
             </div>
             <div class="col-sm">
             </div>
@@ -55,7 +57,8 @@
                             <h5 class="card-title">Projects</h5>
                             <p class="card-text">You can view my projects by clicking on the link below. Check back
                                 often as I am constantly adding content.</p>
-                            <a href="https://github.com/josephbrimeyer" class="btn btn-primary stretched-link">Click here.</a>
+                            <a href="https://github.com/josephbrimeyer" class="btn btn-primary stretched-link">Click
+                                here.</a>
                         </div>
                     </div>
                 </div>
@@ -75,11 +78,11 @@
                 <div class="col mb-4">
                     <div class="card">
                         <img src="images/Hawaii.jpeg" class="card-img-top"
-                            alt="Photo of a man standing at the top of a hill with Hanauma Bay in the background">
+                            alt="Photo of an exhausted, tan, man in a Powell's Books t-shirt and disheveled hair standing at the top of a hill with Hanauma Bay in the background">
                         <div class="card-body">
                             <h5 class="card-title">Outdoors</h5>
                             <p class="card-text">I am a big fan of the outdoors. I like to explore new places. This
-                                picture was taken in Oahu Hawaii after snorkeling in Hanauma Bay.</p>
+                                picture was taken in Oahu, Hawaii after snorkeling in Hanauma Bay.</p>
                             <a href="https://hanaumabaystatepark.com/" class="btn btn-primary stretched-link">Click
                                 here.</a>
                         </div>
@@ -88,7 +91,7 @@
                 <div class="col mb-4">
                     <div class="card">
                         <img src="images/Seahawks.jpeg" class="card-img-top"
-                            alt="Photo of Century Link field, home of the Seattle Seahawks football team from the perspective of the west-side stands.">
+                            alt="Photo of the legendary Century Link field, home of the Super Bowl 40 Champions!  Your's Seattle Seahawks!!!  This awesome photographer's perspective is from the 300 level of the west-side of the stadium, home-team side, stands.  Players and entertainers are on the field.  The retired jerseys hanging from the rafters on the east side of the stadium are clearly visible including #45, #80, #12 of course!, #96, and my all time favorite #71! Photo is circa year 1999.">
                         <div class="card-body">
                             <h5 class="card-title">Interests</h5>
                             <p class="card-text">I have many interests including hiking, camping, fishing, golf, and
