--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                         <small id="emailHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
+                        <label for="exampleInputPassword1">Name</label>
                         <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
                     <div class="form-group">
