updated the contact me page.

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <a class="nav-link" href="index.html"><h2>Joseph Brimeyer</h2></a>
+                <a class="nav-link" href="index.html">
+                    <h2>Joseph Brimeyer</h2>
+                </a>
             </div>
             <div class="col-sm">
             </div>
@@ -58,16 +60,15 @@
             <form>
                 <div class="container">
                     <div class="form-group">
+                        <label for="exampleInputEmail1">Name</label>
+                        <input class="form-control form-control-lg" type="text" placeholder="">
+                    </div>
+                    <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted"></small>
+                        <input class="form-control form-control-lg" type="text" placeholder="">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Name</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Comments</label>
+                        <label for="exampleInputEmail1">Comments</label>
                         <input class="form-control form-control-lg" type="text" placeholder="">
                     </div>
 
