changed the layout of the cards on portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,63 +46,78 @@
                     </ul>
                 </nav>
             </div>
+        </div>
+    </div>
 
 
-            <div class="row row-cols-1 row-cols-md-2">
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                            class="card-img-top" alt="A photo of a computer screen with code">
-                        <div class="card-body">
-                            <h5 class="card-title">Projects</h5>
-                            <p class="card-text">You can view my projects by clicking on the link below. Check back
-                                often as I am constantly adding content.</p>
-                            <a href="https://github.com/josephbrimeyer" class="btn btn-primary stretched-link">Click
-                                here.</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCF7jR8l6MAmqolymJ7KFDTcmbJ1Asck51XiFLPZ3KynNOt1LW&usqp=CAU"
-                            class="card-img-top" alt="A clip art image of a basketball.">
-                        <div class="card-body">
-                            <h5 class="card-title">Volunteer Activities</h5>
-                            <p class="card-text">I volunteer as a basketball coach for youth. I have coached 4 seasons
-                                through the Seattle CYO program.</p>
-                            <a href="https://www.teamsideline.com/seattlecyo"
-                                class="btn btn-primary stretched-link">Click here.</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="images/Hawaii.jpeg" class="card-img-top"
-                            alt="Photo of an exhausted, tan, man in a Powell's Books t-shirt and disheveled hair standing at the top of a hill with Hanauma Bay in the background">
-                        <div class="card-body">
-                            <h5 class="card-title">Outdoors</h5>
-                            <p class="card-text">I am a big fan of the outdoors. I like to explore new places. This
-                                picture was taken in Oahu, Hawaii after snorkeling in Hanauma Bay.</p>
-                            <a href="https://hanaumabaystatepark.com/" class="btn btn-primary stretched-link">Click
-                                here.</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card">
-                        <img src="images/Seahawks.jpeg" class="card-img-top"
-                            alt="Photo of the legendary Century Link field, home of the Super Bowl 40 Champions!  Your's Seattle Seahawks!!!  This awesome photographer's perspective is from the 300 level of the west-side of the stadium, home-team side, stands.  Players and entertainers are on the field.  The retired jerseys hanging from the rafters on the east side of the stadium are clearly visible including #45, #80, #12 of course!, #96, and my all time favorite #71! Photo is circa year 1999.">
-                        <div class="card-body">
-                            <h5 class="card-title">Interests</h5>
-                            <p class="card-text">I have many interests including hiking, camping, fishing, golf, and
-                                music. I also enjoy baseball, basketball and going to Seahawk games.</p>
-                            <a href="https://www.seahawks.com" class="btn btn-primary stretched-link">Click here.</a>
-                        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col">
+                <div class="card border-primary" style="width: 18rem;">
+                    <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                        class="card-img-top" alt="A photo of a computer screen with code">
+                    <div class="card-body">
+                        <h5 class="card-title">Projects</h5>
+                        <p class="card-text">You can view my projects by clicking on the link below. Check back
+                            often as I am constantly adding content.</p>
+                        <a href="https://github.com/josephbrimeyer" class="btn btn-primary stretched-link">Click
+                            here.</a>
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <div class="card border-primary" style="width: 18rem;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTCF7jR8l6MAmqolymJ7KFDTcmbJ1Asck51XiFLPZ3KynNOt1LW&usqp=CAU"
+                        class="card-img-top" alt="A clip art image of a basketball.">
+                    <div class="card-body">
+                        <h5 class="card-title">Volunteer Activities</h5>
+                        <p class="card-text">I volunteer as a basketball coach for youth. I have coached 4 seasons
+                            through the Seattle CYO program.</p>
+                        <a href="https://www.teamsideline.com/seattlecyo" class="btn btn-primary stretched-link">Click
+                            here.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col"></div>
         </div>
     </div>
+    
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col">
+                <div class="card border-primary" style="width: 18rem;">
+                    <img src="images/Hawaii.jpeg" class="card-img-top"
+                        alt="Photo of an exhausted, tan, man in a Powell's Books t-shirt standing at the top of a hill with Hanauma Bay in the background">
+                    <div class="card-body">
+                        <h5 class="card-title">Outdoors</h5>
+                        <p class="card-text">I am a big fan of the outdoors. I like to explore new places. This
+                            picture was taken in Oahu, Hawaii after snorkeling in Hanauma Bay.</p>
+                        <a href="https://hanaumabaystatepark.com/" class="btn btn-primary stretched-link">Click
+                            here.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card border-primary" style="width: 18rem;">
+                    <img src="images/Seahawks.jpeg" class="card-img-top"
+                        alt="Photo of the legendary Century Link field, home of the Super Bowl 40 Champions!  Your's Seattle Seahawks!!!  This awesome photographer's perspective is from the 300 level of the west-side of the stadium, home-team side, stands.  Players and entertainers are on the field.  The retired jerseys hanging from the rafters on the east side of the stadium are clearly visible including #45, #80, #12 of course!, #96, and my all time favorite #71! Photo is circa year 1999.">
+                    <div class="card-body">
+                        <h5 class="card-title">Interests</h5>
+                        <p class="card-text">I am interested in hiking, camping, fishing, golf, and
+                            music. I also enjoy baseball, basketball and going to Seahawk games.</p>
+                        <a href="https://www.seahawks.com" class="btn btn-primary stretched-link">Click
+                            here.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+
 </body>
 
 </html>
