--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                         <input class="form-control form-control-lg" type="text" placeholder="">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label for="exampleInputEmail1">Email</label>
                         <input class="form-control form-control-lg" type="text" placeholder="">
                     </div>
                     <div class="form-group">
